--- a/frontend-expenses-tracker/src/App.css
+++ b/frontend-expenses-tracker/src/App.css
@@ -1,38 +1,18 @@
-.App {
-  text-align: center;
+.main {
+  min-height: 70vh;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.login-comp {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
-
-.App-link {
-  color: #61dafb;
+.login-comp {
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login-comp form {
+  background: rgba(118, 113, 113, 0.381);
+  border-radius: 5px;
 }
